--- a/css/main.css
+++ b/css/main.css
@@ -18,4 +18,19 @@ body {
  }
 
  
- 
+ #git_ok_buttom{
+    margin: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: aqua;
+    border: 2px black;
+    
+ }
+
+#git_ok_buttom:hover{
+    background-color: #3c3c3c;
+}
+
+#git_ok_buttom::selection{
+    background-color: #b1b1b1;
+}
